styles.css
:root {
        --card-bd: hsl(0, 0%, 12%);
        --links-bg: hsl(0, 0%, 20%);
        --hover-bg: hsl(75, 94%, 57%);
        --main-text: hsl(0, 0%, 100%);
}

html body {
        font-family: "Inter", sans-serif;
        font-size: 14px;
        text-align: center;
        background-color: hsl(0, 0%, 8%);
        color: var(--main-text);
        box-sizing: border-box;
        display: flex;
        justify-content: center;
        align-items: center;
}

.profile-info {
        width: 300px;
        height: 450px;
        margin: 0 auto;
        background-color: var( --card-bd);
        border-radius: 10px;
        padding: 30px;
}

.profile-img {
        width: 75px;
        border-radius: 50%;
}


.profile-links {
        list-style:none;
}

.links {
        background-color: var(--links-bg);
        margin: 10px auto;
        padding: .5em 1em;
        border-radius: 5px;
}
.profile-links a {
        text-decoration: none;
        color: var(--main-text);
}

footer {
        border: 3px solid yellow;
}

